@@ -26,18 +26,20 @@
  */
 package org.niis.xroad.securityserver.restapi.openapi;
 
+import ee.ria.xroad.common.AddOnStatusDiagnostics;
+import ee.ria.xroad.common.BackupEncryptionStatusDiagnostics;
 import ee.ria.xroad.common.CodedException;
 import ee.ria.xroad.common.DiagnosticStatus;
-import ee.ria.xroad.common.PortNumbers;
-import ee.ria.xroad.common.SystemProperties;
+import ee.ria.xroad.common.DiagnosticsStatus;
 import ee.ria.xroad.common.util.TimeUtils;
 
 import com.google.protobuf.Timestamp;
-import org.junit.BeforeClass;
 import org.junit.Test;
 import org.niis.xroad.common.core.exception.ErrorCode;
+import org.niis.xroad.common.rpc.mapper.DiagnosticStatusMapper;
 import org.niis.xroad.opmonitor.api.OperationalDataInterval;
 import org.niis.xroad.opmonitor.api.OperationalDataIntervalProto;
+import org.niis.xroad.proxy.proto.dto.MessageLogArchiveEncryptionMember;
 import org.niis.xroad.restapi.exceptions.DeviationAwareRuntimeException;
 import org.niis.xroad.restapi.exceptions.DeviationCodes;
 import org.niis.xroad.securityserver.restapi.openapi.model.AddOnStatusDto;
@@ -51,10 +53,12 @@ import org.niis.xroad.securityserver.restapi.openapi.model.OcspResponderDiagnost
 import org.niis.xroad.securityserver.restapi.openapi.model.OperationalDataIntervalDto;
 import org.niis.xroad.securityserver.restapi.openapi.model.TimestampingServiceDiagnosticsDto;
 import org.niis.xroad.securityserver.restapi.service.diagnostic.DiagnosticReportService;
+import org.niis.xroad.signer.api.dto.CertificationServiceDiagnostics;
+import org.niis.xroad.signer.api.dto.CertificationServiceStatus;
+import org.niis.xroad.signer.api.dto.OcspResponderStatus;
 import org.niis.xroad.signer.api.dto.TokenInfo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.cloud.contract.wiremock.AutoConfigureWireMock;
 import org.springframework.core.io.Resource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -62,22 +66,19 @@ import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
-import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.time.LocalTime;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
-import static com.github.tomakehurst.wiremock.client.WireMock.get;
-import static com.github.tomakehurst.wiremock.client.WireMock.stubFor;
-import static com.github.tomakehurst.wiremock.client.WireMock.urlEqualTo;
 import static ee.ria.xroad.common.ErrorCodes.X_INVALID_REQUEST;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -93,7 +94,6 @@ import static org.mockito.Mockito.when;
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT,
         properties = {"spring.main.lazy-initialization=true"})
 @WithMockUser(authorities = {"DIAGNOSTICS"})
-@AutoConfigureWireMock(port = PortNumbers.ADMIN_PORT)
 public class DiagnosticsApiControllerTest extends AbstractApiControllerTestContext {
 
     private static final OffsetDateTime PREVIOUS_UPDATE = TimeUtils.offsetDateTimeNow().with(LocalTime.of(10, 42));
@@ -112,22 +112,15 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
     @MockitoBean
     private DiagnosticReportService diagnosticReportService;
 
-    @BeforeClass
-    public static void setUp() {
-        // Make them point to Wiremock port
-        System.setProperty(SystemProperties.CONFIGURATION_CLIENT_ADMIN_PORT, Integer.toString(PortNumbers.ADMIN_PORT));
-        System.setProperty(SystemProperties.SIGNER_ADMIN_PORT, Integer.toString(PortNumbers.ADMIN_PORT));
-    }
-
     @Test
     public void getAddOnDiagnostics() {
-        stubForDiagnosticsRequest("/addonstatus", "{\"messageLogEnabled\":true,\"opMonitoringEnabled\": true}");
+        when(proxyRpcClient.getAddOnStatus()).thenReturn(new AddOnStatusDiagnostics(true, true));
         ResponseEntity<AddOnStatusDto> response = diagnosticsApiController.getAddOnDiagnostics();
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(true, response.getBody().getMessagelogEnabled());
         assertEquals(true, response.getBody().getOpmonitoringEnabled());
 
-        stubForDiagnosticsRequest("/addonstatus", "{\"messageLogEnabled\":false,\"opMonitoringEnabled\": false}");
+        when(proxyRpcClient.getAddOnStatus()).thenReturn(new AddOnStatusDiagnostics(false, false));
         response = diagnosticsApiController.getAddOnDiagnostics();
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(false, response.getBody().getMessagelogEnabled());
@@ -136,15 +129,15 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
 
     @Test
     public void getBackupEncryptionDiagnostics() {
-        stubForDiagnosticsRequest("/backup-encryption-status",
-                "{\"backupEncryptionStatus\":true,\"backupEncryptionKeys\":[\"keyid\"]}");
+        when(backupManagerRpcClient.getEncryptionStatus()).thenReturn(
+                new BackupEncryptionStatusDiagnostics(true, List.of("keyid")));
         ResponseEntity<BackupEncryptionStatusDto> response = diagnosticsApiController.getBackupEncryptionDiagnostics();
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(true, response.getBody().getBackupEncryptionStatus());
         assertEquals(1, response.getBody().getBackupEncryptionKeys().size());
 
-        stubForDiagnosticsRequest("/backup-encryption-status",
-                "{\"backupEncryptionStatus\":false,\"backupEncryptionKeys\":[]}");
+        when(backupManagerRpcClient.getEncryptionStatus()).thenReturn(
+                new BackupEncryptionStatusDiagnostics(false, List.of()));
         response = diagnosticsApiController.getBackupEncryptionDiagnostics();
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(false, response.getBody().getBackupEncryptionStatus());
@@ -153,10 +146,10 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
 
     @Test
     public void getMessageLogEncryptionDiagnostics() {
-        stubForDiagnosticsRequest("/message-log-encryption-status",
-                "{\"messageLogArchiveEncryptionStatus\":true,\"messageLogDatabaseEncryptionStatus\":true,"
-                        + "\"messageLogGroupingRule\":\"none\",\"members\":[{\"memberId\":\"memberId\","
-                        + "\"keys\":[\"key\"], \"defaultKeyUsed\":false}]}");
+        when(proxyRpcClient.getMessageLogEncryptionStatus()).thenReturn(
+                new org.niis.xroad.proxy.proto.dto.MessageLogEncryptionStatusDiagnostics(true, true, "none",
+                        List.of(new MessageLogArchiveEncryptionMember("memberId", Set.of("key"), false)))
+        );
         ResponseEntity<MessageLogEncryptionStatusDto> response = diagnosticsApiController
                 .getMessageLogEncryptionDiagnostics();
         assertEquals(HttpStatus.OK, response.getStatusCode());
@@ -165,9 +158,10 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         assertEquals(GROUPING_RULE, response.getBody().getMessageLogGroupingRule());
         assertEquals(1, response.getBody().getMembers().size());
 
-        stubForDiagnosticsRequest("/message-log-encryption-status",
-                "{\"messageLogArchiveEncryptionStatus\":false,\"messageLogDatabaseEncryptionStatus\":false, "
-                        + "\"messageLogGroupingRule\":\"none\",\"members\":[]}");
+        when(proxyRpcClient.getMessageLogEncryptionStatus()).thenReturn(
+                new org.niis.xroad.proxy.proto.dto.MessageLogEncryptionStatusDiagnostics(false, false, "none",
+                        List.of())
+        );
         response = diagnosticsApiController.getMessageLogEncryptionDiagnostics();
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(false, response.getBody().getMessageLogArchiveEncryptionStatus());
@@ -178,44 +172,44 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
 
     @Test
     public void getGlobalConfDiagnosticsSuccess() {
-        final OffsetDateTime prevUpdate = TimeUtils.offsetDateTimeNow();
-        final OffsetDateTime nextUpdate = prevUpdate.plusHours(1);
-        stubForDiagnosticsRequest("/status",
-                "{\"status\":\"" + DiagnosticStatus.OK + "\",\"prevUpdate\":\"" + prevUpdate
-                        + "\",\"nextUpdate\":\"" + nextUpdate + "\"}");
+        final Instant prevUpdate = Instant.now().truncatedTo(ChronoUnit.MILLIS);
+        final Instant nextUpdate = prevUpdate.plus(1, ChronoUnit.HOURS);
+        when(confClientRpcClient.getStatus()).thenReturn(
+                createDiagnosticsStatus(DiagnosticStatus.OK, prevUpdate, nextUpdate));
 
         ResponseEntity<GlobalConfDiagnosticsDto> response = diagnosticsApiController.getGlobalConfDiagnostics();
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         GlobalConfDiagnosticsDto globalConfDiagnostics = response.getBody();
         assertEquals(DiagnosticStatusClassDto.OK, globalConfDiagnostics.getStatusClass());
-        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt());
-        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt());
+        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt().toInstant());
+        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt().toInstant());
     }
 
     @Test
     public void getGlobalConfDiagnosticsWaiting() {
-        final OffsetDateTime prevUpdate = TimeUtils.offsetDateTimeNow();
-        final OffsetDateTime nextUpdate = prevUpdate.plusHours(1);
-        stubForDiagnosticsRequest("/status", "{\"status\":\"" + DiagnosticStatus.UNINITIALIZED + "\","
-                + "\"prevUpdate\":\"" + prevUpdate + "\",\"nextUpdate\":\"" + nextUpdate + "\"}");
+        final Instant prevUpdate = Instant.now().truncatedTo(ChronoUnit.MILLIS);
+        final Instant nextUpdate = prevUpdate.plus(1, ChronoUnit.HOURS);
+
+        when(confClientRpcClient.getStatus()).thenReturn(
+                createDiagnosticsStatus(DiagnosticStatus.UNINITIALIZED, prevUpdate, nextUpdate));
 
         ResponseEntity<GlobalConfDiagnosticsDto> response = diagnosticsApiController.getGlobalConfDiagnostics();
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         GlobalConfDiagnosticsDto globalConfDiagnostics = response.getBody();
         assertEquals(DiagnosticStatusClassDto.WAITING, globalConfDiagnostics.getStatusClass());
-        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt());
-        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt());
+        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt().toInstant());
+        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt().toInstant());
     }
 
     @Test
     public void getGlobalConfDiagnosticsFailNextUpdateTomorrow() {
-        final OffsetDateTime prevUpdate = TimeUtils.offsetDateTimeNow();
-        final OffsetDateTime nextUpdate = prevUpdate.plusDays(1);
-        stubForDiagnosticsRequest("/status",
-                "{\"errorCode\":\"" + ErrorCode.INTERNAL_ERROR + "\",\"prevUpdate\":\"" + prevUpdate
-                        + "\",\"nextUpdate\":\"" + nextUpdate + "\",\"status\":\"" + DiagnosticStatus.ERROR + "\"}");
+        final Instant prevUpdate = Instant.now().truncatedTo(ChronoUnit.MILLIS);
+        final Instant nextUpdate = prevUpdate.plus(1, ChronoUnit.DAYS);
+
+        when(confClientRpcClient.getStatus()).thenReturn(
+                createDiagnosticsStatus(ErrorCode.INTERNAL_ERROR, prevUpdate, nextUpdate));
 
         ResponseEntity<GlobalConfDiagnosticsDto> response = diagnosticsApiController.getGlobalConfDiagnostics();
 
@@ -223,31 +217,30 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         GlobalConfDiagnosticsDto globalConfDiagnostics = response.getBody();
         assertEquals(ErrorCode.INTERNAL_ERROR.code(), globalConfDiagnostics.getError().getCode());
         assertEquals(DiagnosticStatusClassDto.FAIL, globalConfDiagnostics.getStatusClass());
-        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt());
-        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt());
+        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt().toInstant());
+        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt().toInstant());
     }
 
     @Test
     public void getGlobalConfDiagnosticsFailPreviousUpdateYesterday() {
-        final OffsetDateTime prevUpdate = TimeUtils.offsetDateTimeNow().with(LocalTime.of(0, 0));
-        final OffsetDateTime nextUpdate = prevUpdate.plusDays(1);
-        stubForDiagnosticsRequest("/status",
-                "{\"prevUpdate\":\"" + prevUpdate + "\",\"nextUpdate\":\""
-                        + nextUpdate + "\", \"status\":\"" + DiagnosticStatus.UNKNOWN + "\"}");
+        final Instant prevUpdate = TimeUtils.offsetDateTimeNow().with(LocalTime.of(0, 0)).toInstant();
+        final Instant nextUpdate = prevUpdate.plus(1, ChronoUnit.DAYS);
+
+        when(confClientRpcClient.getStatus()).thenReturn(
+                createDiagnosticsStatus(DiagnosticStatus.UNKNOWN, prevUpdate, nextUpdate));
 
         ResponseEntity<GlobalConfDiagnosticsDto> response = diagnosticsApiController.getGlobalConfDiagnostics();
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         GlobalConfDiagnosticsDto globalConfDiagnostics = response.getBody();
         assertEquals(DiagnosticStatusClassDto.FAIL, globalConfDiagnostics.getStatusClass());
-        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt());
-        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt());
+        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt().toInstant());
+        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt().toInstant());
     }
 
     @Test
     public void getGlobalConfDiagnosticsException() {
-        stubFor(get(urlEqualTo("/status"))
-                .willReturn(aResponse().withStatus(HttpStatus.INTERNAL_SERVER_ERROR.value())));
+        when(confClientRpcClient.getStatus()).thenThrow(new RuntimeException());
         DeviationAwareRuntimeException exception =
                 assertThrows(DeviationAwareRuntimeException.class, diagnosticsApiController::getGlobalConfDiagnostics);
         assertEquals(DeviationCodes.ERROR_DIAGNOSTIC_REQUEST_FAILED, exception.getErrorDeviation().code());
@@ -255,10 +248,10 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
 
     @Test
     public void getTimestampingServiceDiagnosticsSuccess() {
-        stubForDiagnosticsRequest("/timestampstatus",
-                "{\"" + TSA_URL_1 + "\":{\"status\":\"" + DiagnosticStatus.OK
-                        + "\",\"prevUpdate\":\"" + PREVIOUS_UPDATE + "\",\"description\":\"" + TSA_URL_1 + "\"}}");
-
+        when(proxyRpcClient.getTimestampingStatus()).thenReturn(
+                Map.of(TSA_URL_1, new DiagnosticsStatus(DiagnosticStatus.OK,
+                        PREVIOUS_UPDATE, TSA_URL_1))
+        );
         ResponseEntity<Set<TimestampingServiceDiagnosticsDto>> response =
                 diagnosticsApiController.getTimestampingServicesDiagnostics();
 
@@ -276,9 +269,10 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
 
     @Test
     public void getTimestampingServiceDiagnosticsWaiting() {
-        stubForDiagnosticsRequest("/timestampstatus",
-                "{\"" + TSA_URL_1 + "\":{\"status\":\"" + DiagnosticStatus.UNINITIALIZED
-                        + "\",\"prevUpdate\":\"" + PREVIOUS_UPDATE + "\",\"description\":\"" + TSA_URL_1 + "\"}}");
+        when(proxyRpcClient.getTimestampingStatus()).thenReturn(
+                Map.of(TSA_URL_1, new DiagnosticsStatus(DiagnosticStatus.UNINITIALIZED,
+                        PREVIOUS_UPDATE, TSA_URL_1))
+        );
 
         ResponseEntity<Set<TimestampingServiceDiagnosticsDto>> response =
                 diagnosticsApiController.getTimestampingServicesDiagnostics();
@@ -297,11 +291,10 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
 
     @Test
     public void getTimestampingServiceDiagnosticsFailPreviousUpdateYesterday() {
-        stubForDiagnosticsRequest("/timestampstatus",
-                "{\"" + TSA_URL_1 + "\":{\"status\":\""
-                        + DiagnosticStatus.ERROR + "\",\"prevUpdate\":\"" + PREVIOUS_UPDATE_MIDNIGHT + "\","
-                        + "\"errorCode\":\"" + ErrorCode.MALFORMED_TIMESTAMP_SERVER_URL
-                        + "\",\"description\":\"" + TSA_URL_1 + "\"}}");
+        when(proxyRpcClient.getTimestampingStatus()).thenReturn(
+                Map.of(TSA_URL_1, new DiagnosticsStatus(DiagnosticStatus.ERROR,
+                        PREVIOUS_UPDATE_MIDNIGHT, TSA_URL_1, ErrorCode.MALFORMED_TIMESTAMP_SERVER_URL))
+        );
 
         ResponseEntity<Set<TimestampingServiceDiagnosticsDto>> response =
                 diagnosticsApiController.getTimestampingServicesDiagnostics();
@@ -322,8 +315,7 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
 
     @Test
     public void getTimestampingServiceDiagnosticsException() {
-        stubFor(get(urlEqualTo("/timestampstatus"))
-                .willReturn(aResponse().withStatus(HttpStatus.INTERNAL_SERVER_ERROR.value())));
+        when(proxyRpcClient.getTimestampingStatus()).thenThrow(new RuntimeException());
         DeviationAwareRuntimeException exception = assertThrows(DeviationAwareRuntimeException.class,
                 diagnosticsApiController::getTimestampingServicesDiagnostics);
         assertEquals(DeviationCodes.ERROR_DIAGNOSTIC_REQUEST_FAILED, exception.getErrorDeviation().code());
@@ -331,12 +323,12 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
 
     @Test
     public void getOcspResponderDiagnosticsSuccess() {
-        stubForDiagnosticsRequest("/status",
-                "{\"certificationServiceStatusMap\":{\"" + CA_NAME_1 + "\":{\"name\":\"" + CA_NAME_1
-                        + "\",\"ocspResponderStatusMap\":{\"" + OCSP_URL_1 + "\":{\"diagnosticStatus\":\""
-                        + DiagnosticStatus.OK + "\",\"url\":\""
-                        + OCSP_URL_1 + "\",\"prevUpdate\":\"" + PREVIOUS_UPDATE + "\",\"nextUpdate\":\"" + NEXT_UPDATE
-                        + "\"}}}}}");
+        var certServiceStatus = new CertificationServiceStatus(CA_NAME_1);
+        certServiceStatus.getOcspResponderStatusMap().put(OCSP_URL_1,
+                new OcspResponderStatus(DiagnosticStatus.OK, OCSP_URL_1, PREVIOUS_UPDATE, NEXT_UPDATE));
+        var diagnosticsResponse = new CertificationServiceDiagnostics();
+        diagnosticsResponse.update(Map.of(CA_NAME_1, certServiceStatus));
+        when(signerRpcClient.getCertificationServiceDiagnostics()).thenReturn(diagnosticsResponse);
 
         ResponseEntity<Set<OcspResponderDiagnosticsDto>> response =
                 diagnosticsApiController.getOcspRespondersDiagnostics();
@@ -347,19 +339,20 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         OcspResponderDiagnosticsDto diagnostics = diagnosticsSet.stream().findFirst().orElse(null);
         assertEquals(1, diagnostics.getOcspResponders().size());
         assertEquals(CA_NAME_1, diagnostics.getDistinguishedName());
-        assertEquals(DiagnosticStatusClassDto.OK, diagnostics.getOcspResponders().get(0).getStatusClass());
-        assertEquals(PREVIOUS_UPDATE, diagnostics.getOcspResponders().get(0).getPrevUpdateAt());
-        assertEquals(NEXT_UPDATE, diagnostics.getOcspResponders().get(0).getNextUpdateAt());
-        assertEquals(OCSP_URL_1, diagnostics.getOcspResponders().get(0).getUrl());
+        assertEquals(DiagnosticStatusClassDto.OK, diagnostics.getOcspResponders().getFirst().getStatusClass());
+        assertEquals(PREVIOUS_UPDATE, diagnostics.getOcspResponders().getFirst().getPrevUpdateAt());
+        assertEquals(NEXT_UPDATE, diagnostics.getOcspResponders().getFirst().getNextUpdateAt());
+        assertEquals(OCSP_URL_1, diagnostics.getOcspResponders().getFirst().getUrl());
     }
 
     @Test
     public void getOcspResponderDiagnosticsWaiting() {
-        stubForDiagnosticsRequest("/status",
-                "{\"certificationServiceStatusMap\":{\"" + CA_NAME_2 + "\":{\"name\":\"" + CA_NAME_2 + "\","
-                        + "\"ocspResponderStatusMap\":{\"" + OCSP_URL_2 + "\":{\"diagnosticStatus\":\""
-                        + DiagnosticStatus.UNINITIALIZED + "\",\"url\":\"" + OCSP_URL_2
-                        + "\",\"nextUpdate\":\"" + NEXT_UPDATE + "\"}}}}}");
+        var certServiceStatus = new CertificationServiceStatus(CA_NAME_2);
+        certServiceStatus.getOcspResponderStatusMap().put(OCSP_URL_1,
+                new OcspResponderStatus(DiagnosticStatus.UNINITIALIZED, OCSP_URL_2, null, NEXT_UPDATE));
+        var diagnosticsResponse = new CertificationServiceDiagnostics();
+        diagnosticsResponse.update(Map.of(CA_NAME_2, certServiceStatus));
+        when(signerRpcClient.getCertificationServiceDiagnostics()).thenReturn(diagnosticsResponse);
 
         ResponseEntity<Set<OcspResponderDiagnosticsDto>> response =
                 diagnosticsApiController.getOcspRespondersDiagnostics();
@@ -370,19 +363,25 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         OcspResponderDiagnosticsDto diagnostics = diagnosticsSet.stream().findFirst().orElse(null);
         assertEquals(1, diagnostics.getOcspResponders().size());
         assertEquals(CA_NAME_2, diagnostics.getDistinguishedName());
-        assertEquals(DiagnosticStatusClassDto.WAITING, diagnostics.getOcspResponders().get(0).getStatusClass());
-        assertNull(diagnostics.getOcspResponders().get(0).getPrevUpdateAt());
-        assertEquals(NEXT_UPDATE, diagnostics.getOcspResponders().get(0).getNextUpdateAt());
-        assertEquals(OCSP_URL_2, diagnostics.getOcspResponders().get(0).getUrl());
+        assertEquals(DiagnosticStatusClassDto.WAITING, diagnostics.getOcspResponders().getFirst().getStatusClass());
+        assertNull(diagnostics.getOcspResponders().getFirst().getPrevUpdateAt());
+        assertEquals(NEXT_UPDATE, diagnostics.getOcspResponders().getFirst().getNextUpdateAt());
+        assertEquals(OCSP_URL_2, diagnostics.getOcspResponders().getFirst().getUrl());
     }
 
     @Test
     public void getOcspResponderDiagnosticsFailNextUpdateTomorrow() {
-        stubForDiagnosticsRequest("/status",
-                "{\"certificationServiceStatusMap\":{\"" + CA_NAME_1 + "\":{\"name\":\"" + CA_NAME_1
-                        + "\",\"ocspResponderStatusMap\":{\"" + OCSP_URL_1 + "\":{\"diagnosticStatus\":\"" + DiagnosticStatus.ERROR
-                        + "\",\"errorCode\":\"" + ErrorCode.OCSP_RESPONSE_PARSING_FAILURE + "\",\"url\":\"" + OCSP_URL_1
-                        + "\",\"nextUpdate\":\"" + NEXT_UPDATE_MIDNIGHT + "\"}}}}}");
+        var certServiceStatus = new CertificationServiceStatus(CA_NAME_1);
+        OcspResponderStatus responderStatus = new OcspResponderStatus(DiagnosticStatus.ERROR,
+                OCSP_URL_1,
+                null,
+                NEXT_UPDATE_MIDNIGHT,
+                ErrorCode.OCSP_RESPONSE_PARSING_FAILURE);
+        certServiceStatus.getOcspResponderStatusMap().put(OCSP_URL_1,
+                responderStatus);
+        var diagnosticsResponse = new CertificationServiceDiagnostics();
+        diagnosticsResponse.update(Map.of(CA_NAME_1, certServiceStatus));
+        when(signerRpcClient.getCertificationServiceDiagnostics()).thenReturn(diagnosticsResponse);
 
         ResponseEntity<Set<OcspResponderDiagnosticsDto>> response = diagnosticsApiController
                 .getOcspRespondersDiagnostics();
@@ -394,20 +393,21 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         assertEquals(1, diagnostics.getOcspResponders().size());
         assertEquals(CA_NAME_1, diagnostics.getDistinguishedName());
         assertEquals(ErrorCode.OCSP_RESPONSE_PARSING_FAILURE.code(), diagnostics.getOcspResponders()
-                .get(0).getError().getCode());
-        assertEquals(DiagnosticStatusClassDto.FAIL, diagnostics.getOcspResponders().get(0).getStatusClass());
-        assertNull(diagnostics.getOcspResponders().get(0).getPrevUpdateAt());
-        assertEquals(NEXT_UPDATE_MIDNIGHT, diagnostics.getOcspResponders().get(0).getNextUpdateAt());
-        assertEquals(OCSP_URL_1, diagnostics.getOcspResponders().get(0).getUrl());
+                .getFirst().getError().getCode());
+        assertEquals(DiagnosticStatusClassDto.FAIL, diagnostics.getOcspResponders().getFirst().getStatusClass());
+        assertNull(diagnostics.getOcspResponders().getFirst().getPrevUpdateAt());
+        assertEquals(NEXT_UPDATE_MIDNIGHT, diagnostics.getOcspResponders().getFirst().getNextUpdateAt());
+        assertEquals(OCSP_URL_1, diagnostics.getOcspResponders().getFirst().getUrl());
     }
 
     @Test
     public void getOcspResponderDiagnosticsFailPreviousUpdateYesterday() {
-        stubForDiagnosticsRequest("/status",
-                "{\"certificationServiceStatusMap\":{\"" + CA_NAME_2 + "\":{\"name\":\"" + CA_NAME_2
-                        + "\",\"ocspResponderStatusMap\":{\"" + OCSP_URL_2 + "\":{\"diagnosticStatus\":\"" + DiagnosticStatus.UNKNOWN
-                        + "\",\"url\":\"" + OCSP_URL_2 + "\",\"prevUpdate\":\""
-                        + PREVIOUS_UPDATE_MIDNIGHT + "\",\"nextUpdate\":\"" + NEXT_UPDATE_MIDNIGHT + "\"}}}}}");
+        var certServiceStatus = new CertificationServiceStatus(CA_NAME_2);
+        certServiceStatus.getOcspResponderStatusMap().put(OCSP_URL_2,
+                new OcspResponderStatus(DiagnosticStatus.UNKNOWN, OCSP_URL_2, PREVIOUS_UPDATE_MIDNIGHT, NEXT_UPDATE_MIDNIGHT));
+        var diagnosticsResponse = new CertificationServiceDiagnostics();
+        diagnosticsResponse.update(Map.of(CA_NAME_2, certServiceStatus));
+        when(signerRpcClient.getCertificationServiceDiagnostics()).thenReturn(diagnosticsResponse);
 
         ResponseEntity<Set<OcspResponderDiagnosticsDto>> response = diagnosticsApiController
                 .getOcspRespondersDiagnostics();
@@ -421,16 +421,15 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
                 .orElse(null);
         assertEquals(1, diagnostics.getOcspResponders().size());
         assertEquals(CA_NAME_2, diagnostics.getDistinguishedName());
-        assertEquals(DiagnosticStatusClassDto.FAIL, diagnostics.getOcspResponders().get(0).getStatusClass());
-        assertEquals(PREVIOUS_UPDATE_MIDNIGHT, diagnostics.getOcspResponders().get(0).getPrevUpdateAt());
-        assertEquals(NEXT_UPDATE_MIDNIGHT, diagnostics.getOcspResponders().get(0).getNextUpdateAt());
-        assertEquals(OCSP_URL_2, diagnostics.getOcspResponders().get(0).getUrl());
+        assertEquals(DiagnosticStatusClassDto.FAIL, diagnostics.getOcspResponders().getFirst().getStatusClass());
+        assertEquals(PREVIOUS_UPDATE_MIDNIGHT, diagnostics.getOcspResponders().getFirst().getPrevUpdateAt());
+        assertEquals(NEXT_UPDATE_MIDNIGHT, diagnostics.getOcspResponders().getFirst().getNextUpdateAt());
+        assertEquals(OCSP_URL_2, diagnostics.getOcspResponders().getFirst().getUrl());
     }
 
     @Test
     public void getOcspResponderDiagnosticsException() {
-        stubFor(get(urlEqualTo("/status"))
-                .willReturn(aResponse().withStatus(HttpStatus.INTERNAL_SERVER_ERROR.value())));
+        when(signerRpcClient.getCertificationServiceDiagnostics()).thenThrow(new RuntimeException());
         DeviationAwareRuntimeException exception = assertThrows(DeviationAwareRuntimeException.class,
                 diagnosticsApiController::getOcspRespondersDiagnostics);
         assertEquals(DeviationCodes.ERROR_DIAGNOSTIC_REQUEST_FAILED, exception.getErrorDeviation().code());
@@ -438,7 +437,7 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
 
     @Test
     @WithMockUser(authorities = {"DOWNLOAD_ANCHOR"})
-    public void downloadDiagnosticsReportWithoutRequiredAuthorities() throws IOException {
+    public void downloadDiagnosticsReportWithoutRequiredAuthorities() throws Exception {
         byte[] bytes = "[{}]".getBytes(StandardCharsets.UTF_8);
         when(diagnosticReportService.collectSystemInformation()).thenReturn(bytes);
         when(systemService.getAnchorFilenameForDownload())
@@ -449,7 +448,7 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
 
     @Test
     @WithMockUser(authorities = {"DOWNLOAD_DIAGNOSTICS_REPORT"})
-    public void downloadDiagnosticsReport() throws IOException {
+    public void downloadDiagnosticsReport() throws Exception {
         byte[] bytes = "[{}]".getBytes(StandardCharsets.UTF_8);
         when(diagnosticReportService.collectSystemInformation()).thenReturn(bytes);
         when(systemService.getAnchorFilenameForDownload())
@@ -515,6 +514,13 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
     @WithMockUser(authorities = {"DIAGNOSTICS"})
     public void getGlobalConfStatus() {
         when(globalConfProvider.findSourceAddresses()).thenReturn(Set.of("one-host"));
+        when(confClientRpcClient.checkAndGetConnectionStatus(any()))
+                .thenReturn(org.niis.xroad.rpc.common.DownloadUrlConnectionStatus.newBuilder()
+                        .setDownloadUrl("http://one-host:80/internalconf")
+                        .build())
+                .thenReturn(org.niis.xroad.rpc.common.DownloadUrlConnectionStatus.newBuilder()
+                        .setDownloadUrl("https://one-host:443/internalconf")
+                        .build());
 
         ResponseEntity<List<GlobalConfConnectionStatusDto>> response = diagnosticsApiController.getGlobalConfStatus();
 
@@ -534,13 +540,28 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         assertEquals(expectedUrls, actualUrls);
 
         globalConfStatuses.forEach(status -> {
-            assertEquals(DiagnosticStatusClassDto.FAIL, status.getConnectionStatus().getStatusClass());
-            assertEquals("unknown_host", status.getConnectionStatus().getError().getCode());
+            assertEquals(DiagnosticStatusClassDto.OK, status.getConnectionStatus().getStatusClass());
         });
     }
 
-    private void stubForDiagnosticsRequest(String requestPath, String responseBody) {
-        stubFor(get(urlEqualTo(requestPath))
-                .willReturn(aResponse().withBody(responseBody)));
+    private org.niis.xroad.rpc.common.DiagnosticsStatus createDiagnosticsStatus(DiagnosticStatus status,
+                                                                                Instant prevUpdate,
+                                                                                Instant nextUpdate) {
+        return org.niis.xroad.rpc.common.DiagnosticsStatus.newBuilder()
+                .setStatus(DiagnosticStatusMapper.mapStatus(status))
+                .setPrevUpdate(prevUpdate.toEpochMilli())
+                .setNextUpdate(nextUpdate.toEpochMilli())
+                .build();
+    }
+
+    private org.niis.xroad.rpc.common.DiagnosticsStatus createDiagnosticsStatus(ErrorCode errorCode,
+                                                                                Instant prevUpdate,
+                                                                                Instant nextUpdate) {
+        return org.niis.xroad.rpc.common.DiagnosticsStatus.newBuilder()
+                .setStatus(DiagnosticStatusMapper.mapStatus(DiagnosticStatus.ERROR))
+                .setPrevUpdate(prevUpdate.toEpochMilli())
+                .setNextUpdate(nextUpdate.toEpochMilli())
+                .setErrorCode(errorCode.name())
+                .build();
     }
 }
